feat: WordsRank